--- a/_/components/sass/layout/_container.scss
+++ b/_/components/sass/layout/_container.scss
@@ -1,21 +1,3 @@
-// Susy setup -----------------------------------
-$susy: (
-	columns: 12,
-	gutters: 0,
-	math: fluid,
-	output: float,
-	gutter-position: inside,
-);
-
-@include border-box-sizing;
-
-$small                : 32.5em;
-$shmedium             : 37.5em;
-$medium               : 48em;
-$large                : 64em;
-$breakpoint-high-rez	: 'min-resolution: 1.5dppx';
-
-
 .container {
 	padding: 4em 0;
 }
