--- a/_/css/styles.css
+++ b/_/css/styles.css
@@ -66,8 +66,11 @@ h1 {
   font-size: 1rem;
   font-weight: 400;
   color: #fff;
-  letter-spacing: 13px;
+  letter-spacing: 9px;
   padding: 0 0 .5em 0; }
+  @media (min-width: 37.5em) {
+    h1 {
+      letter-spacing: 13px; } }
 
 h2 {
   font-size: 1rem;
@@ -106,11 +109,6 @@ hr {
 ========================================*/
 span.red {
   color: #b8463a; }
-
-*, *:before, *:after {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
 
 .container {
   padding: 4em 0; }
